# refund-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  events.py  main.py  store.py  voice.py
backend/app/agent/: loop.py  policy.py  tools.py
backend/data/: customers.json  refund_policy.md
backend/tests/: test_gate.py  test_policy.py
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/lib/: api.ts
frontend/src/views/: Admin.tsx  Chat.tsx
